<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_date" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_start" />

        <TextView
            android:id="@+id/tvStart"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_end" />

        <TextView
            android:id="@+id/tvEnd"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_time_operation" />

        <TextView
            android:id="@+id/tvTimeCurrent"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_time_all" />

        <TextView
            android:id="@+id/tvTimeAll"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_pictures" />

        <TextView
            android:id="@+id/tvPictures"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/infoAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_info_km_traveled" />

        <TextView
            android:id="@+id/tvKm"
            style="@style/infoContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="25 km" />
    </LinearLayout>


</LinearLayout>