<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pwd_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_pwd_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_pwd_current"
                android:inputType="text"
                android:textColorHint="#212121" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_new_pwd"
                android:inputType="text"
                android:textColorHint="#212121" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repeat_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancelar"
                    android:theme="@style/ButtonDefault" />

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_change_password"
                    android:theme="@style/ButtonStart" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_repeat_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_repeat_pwd"
                android:inputType="text"
                android:textColorHint="#212121" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_response"
            android:visibility="gone"
            android:textColor="@color/colorStatusDanger"/>


</LinearLayout>